# Joffrey_s_Journey

./: .gitignore  CMakeLists.txt  Dockerfile  Joffrey_s_Journey.pro  README.md  README.txt  aspects.py
app/: app.pro
aspects/: GameTickMetrics.acpp  HardwareUsage.acpp  SceneDebug.acpp
data/: level_0.txt  level_1.txt  level_test.txt  player_data.txt  records.txt
include/: Arrow.h  ArrowDown.h  ArrowLeft.h  ArrowRight.h  ArrowThrower.h  ArrowUp.h  BreakablePlatform.h  Button.h  Coin.h  EventItem.h  Flag.h  Infos.h  Lava.h  LevelChoiceButton.h  LevelEnd.h  Login.h  MainWindow.h  Menu.h  MovingPlatform.h  MyScene.h  Pause.h  Platform.h  Player.h  PushablePlatform.h  SecretRoom.h  SemiPassablePlatform.h  SkillPlatform.h  SlidingPlatform.h  SpecialInitialStateEventItem.h  TextArea.h  utils.h
src/: Arrow.cpp  Arrow.h  ArrowDown.cpp  ArrowLeft.cpp  ArrowRight.cpp  ArrowThrower.cpp  ArrowUp.cpp  BreakablePlatform.cpp  BreakablePlatform.h  Button.cpp  Coin.cpp  Coin.h  EventItem.cpp  EventItem.h  Flag.cpp  Infos.cpp  Infos.h  Lava.cpp  Lava.h  LevelChoiceButton.cpp  LevelEnd.cpp  LevelEnd.h  Login.cpp  MainWindow.cpp  MainWindow.h  Menu.cpp  Menu.h  MovingPlatform.cpp  MovingPlatform.h  MyScene.cpp  MyScene.h  Pause.cpp  Platform.cpp  Platform.h  Player.cpp  PlayerData.cpp  PlayerData.h  PushablePlatform.cpp  PushablePlatform.h  SecretRoom.cpp  (+8 more)
tests/: LevelSceneGeneration.cpp  LevelSceneGeneration.h  PlayerInteractionsTests.cpp  PlayerInteractionsTests.h  TestExample.cpp  TestExample.h  TestsGlobal.cpp  TestsGlobal.h  UnitTest.cpp  UnitTest.h  WindowGenerationTests.cpp  (+3 more)
